2006-01-30  Andy Wingo  <wingo@pobox.com>

	* ext/theora/theoraenc.c (theora_enc_sink_setcaps) 
	(gst_theora_enc_init): Pull the granule shift out of the encoder.
	(granulepos_add): New function, handles the messiness of adjusting
	granulepos values.
	(theora_buffer_from_packet):
	(theora_enc_chain):
	(theora_enc_sink_event): Use granulepos_add, not +.

	* tests/check/pipelines/theoraenc.c
	(check_buffer_granulepos_from_starttime): Just check the frame
	count, not the actual granulepos -- we can't dictate to the
	encoder when it should be placing keyframes.

2006-01-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/gnomevfs/gstgnomevfssrc.c: (gst_gnome_vfs_src_start):
	  SERVICE_NOT_AVAILABLE happens for example when you're trying to
	  play an http:// stream from a server that's not serving

2006-01-30  Andy Wingo  <wingo@pobox.com>

	* tests/check/pipelines/vorbisenc.c (TIMESTAMP_OFFSET): 
	* tests/check/pipelines/theoraenc.c (TIMESTAMP_OFFSET): Totally
	remove the UINT64_CONSTANT macro, doesn't appear to be needed or
	available.

	* ext/theora/gsttheoraenc.h:
	* ext/theora/theoraenc.c: Same changes as were done to vorbisenc,
	although theoraenc was timestamping correctly. Added handling of
	streams that start with nonzero timestamps.

	* tests/check/Makefile.am:
	* tests/check/pipelines/theoraenc.c: New file, basically does same
	tests as vorbisenc.

	* tests/check/pipelines/vorbisenc.c: I claim these bugs.

2006-01-30  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstaudiosink.c:
	(gst_audioringbuffer_class_init), (gst_audioringbuffer_release),
	(gst_audioringbuffer_pause):
	Implement pause that does not wait for completion.

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_render), (gst_base_audio_sink_change_state):
	Don't drop buffers when going to PAUSED but perform preroll on
	remaining samples now that core base class supports this.

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_release),